<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:paddingTop="5dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_dark_frame"
                android:text="@string/color"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_dark_frame"
                android:text="@string/estado"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:contentDescription="@string/rojo"
                android:src="@drawable/sin_inventario" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:text="@string/sin_inventario"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:contentDescription="@string/verde"
                android:src="@drawable/existe" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:text="@string/incluido_en_el_pedido"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:contentDescription="@string/azul"
                android:src="@drawable/disponible" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:text="@string/disponible"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/lblMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/aceptar"
                android:drawablePadding="10dp"
                android:text="@string/aceptar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cancel"
                android:drawablePadding="10sp"
                android:text="@string/cancelar" />
        </TableRow>
    </TableLayout>

</LinearLayout>