<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="8dp" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:background="#FFFFFF" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cliente"
                        android:textColor="#000000"
                        android:textStyle="bold" >
                    </TextView>

                    <TextView
                        android:id="@+id/lblCliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:textColor="#000000" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="#000000"
                        android:textStyle="bold" >
                    </TextView>

                    <TextView
                        android:id="@+id/lblValorNetoPedido"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="@string/cero"
                        android:textColor="#000000" >
                    </TextView>
                </TableRow>
            </TableLayout>

            <ListView
                android:id="@+id/listaResumenPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >
            </ListView>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        style="@android:style/MediaButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancelarPedidoResumenPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/cancel"
            android:drawablePadding="5dp"
            android:text="@string/cancelar_pedido" 
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btnAceptarResumenPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/cancel"
            android:drawablePadding="5dp"
            android:text="@string/cerrar" />

        <Button
            android:id="@+id/btnImprimirPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@drawable/print"
            android:drawablePadding="5dp"
            android:text="" />
    </LinearLayout>

</LinearLayout>