<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10dp" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/banco_"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spnBancosDeposito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/apptheme_spinner_default_holo_light"
                    android:text="@string/prompt_banco" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/comp_bancario"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextCompBancarioDep"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.33"
                    android:maxLength="50"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/cantidad_cheques"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextCantidadDep"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.33"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/observacion"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextObservacionesDep"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.33"
                    android:maxLength="400"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonAceptarDialogDep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.33"
                    android:drawableLeft="@drawable/aceptar"
                    android:drawablePadding="4dp"
                    android:text="@string/aceptar" />

                <Button
                    android:id="@+id/buttonCancelarDialogDep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.33"
                    android:drawableLeft="@drawable/cancel"
                    android:drawablePadding="4dp"
                    android:text="@string/cancelar" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</ScrollView>