<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtUsuarioConfig"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:drawable/editbox_background"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>


    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/btnGuardarConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/aceptar"
                android:drawablePadding="10dp"
                android:text="@string/aceptar" />

            <Button
                android:id="@+id/btnCancelarConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cancel"
                android:drawablePadding="10sp"
                android:text="@string/cancelar" />
        </TableRow>
    </TableLayout>

</LinearLayout>